# lianghua-rs

./: .gitignore  AGENTS.md  Cargo.toml  config.toml  ind.toml  optimize.diff  optimize2.diff  plan.md  score_rule.toml
.cargo/: config.toml
.github/workflows/: android-tauri.yml  windows-tauri.yml
analysis_tools/market_analyze/: Cargo.toml  README.md
docs/: chart-indicator-settings-page-design.md  custom-chart-indicators-blueprint.md  custom-chart-indicators-plan.md
src/: lib.rs  main.rs
src/config/: mod.rs
src/crawler/: concept.rs  mod.rs
src/data/: concept_performance_data.rs  cyq.rs  cyq_chen.rs  cyq_chen_data.rs  cyq_data.rs  download_data.rs  duckdb_compat.rs  mod.rs  scoring_data.rs  simulate.rs
src/download/: ind_calc.rs  mod.rs  runner.rs
src/expr/: eval.rs  lexer.rs  parser.rs
src/scoring/: data.rs  mod.rs  runner.rs  tools.rs
src/simulate/: fp_utils.rs  mod.rs  rank.rs  rule.rs  scene.rs
src/statistics/: main.rs
src/strategy/: loader.rs
src/ui_tools/: board_analysis.rs  data_download.rs  details.rs  market_monitor.rs  market_simulation.rs  mod.rs  overview.rs  reader.rs  realtime.rs  return_backtest.rs  statistics.rs  stock_pick.rs  strategy_manage.rs  strategy_performance.rs  watch_observe.rs
src/ui_tools_feat/: all_market_monitor.rs  chart_indicator.rs  chart_indicator_settings.rs  concept_stock_pick.rs  cyq_chen.rs  data_download.rs  data_import.rs  data_viewer.rs  details.rs  expression_stock_pick.rs  intraday_monitor.rs  mod.rs  overview.rs  overview_classic.rs  ranking_compute.rs  realtime.rs  statistics.rs  stock_pick.rs  (+5 more)
(+197 files in other folders)
