[package]
name = "lianghua-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
duckdb = "1.4.4"
rayon = "1.11.0"
csv = "1.4.0"
reqwest = { version = "0.13.2", features = ["blocking", "json", "query"] }
serde_json = "1.0.149"
encoding_rs = "0.8.35"
chrono = "0.4.44"
rand = "0.9.2"
